Fix #70 header background gap

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 }
 body {
   color: #FFFFFF;
-  background: #013356 url('../images/full-bg-wo-top-wo-globe.png') no-repeat scroll center top;
+  background: #013356 url('../images/full-bg-wo-globe.png') no-repeat scroll center top;
   overflow-x: hidden;
   width: 100%;
   margin: 0;
@@ -77,18 +77,22 @@ select, option {
   padding-bottom: 325px;
 }
 #top-static-fix{
+  margin-bottom: 50px;
   padding: 96px 0 66px 0;
   position:relative;
   z-index: 100;
-  background: rgba(10, 134, 188, 0.7);
+  background: #0A86BC url(../images/full-bg-overlay-wo-globe.png) no-repeat scroll center top;
 }
-#top-static-fix + .fox {
-  display: block;
+#top-static-fix .row {
   position: relative;
-  bottom: 99px;
+  z-index: 300;
+}
+#top-static-fix:after {
+  display: block;
+  position: absolute;
+  bottom: -150px;
   right: 0;
   z-index: 200;
-  margin-bottom: -200px;
   width: 100%;
   height: 249px;
   background: url('../images/full-bg-wo-top-globe-only.png') no-repeat scroll center top;
@@ -355,9 +359,6 @@ font-family: "FontAwesome" !important;
 }
 
 @media only screen and (min-width: 40.063em) and (max-width: 64em) { 
-  #top-static-fix{
-    padding: 85px 0px 105px;
-  }
   #heading{
     font-size:54px;
   }
